--- a/Window1.xaml
+++ b/Window1.xaml
@@ -7,8 +7,11 @@
         mc:Ignorable="d"
         Title="Window1" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="datagrid" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="428,10,10,88"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="192,102,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <DataGrid x:Name="datagrid" Margin="428,10,10,88"/>
+        <Button Content="Read" HorizontalAlignment="Left" Margin="114,121,0,0" VerticalAlignment="Top" Click="Read" Height="21" Width="77"/>
+        <Button Content="Create" HorizontalAlignment="Left" Margin="116,90,0,0" VerticalAlignment="Top" Width="72" Click="Create"/>
+        <Button Content="Update" HorizontalAlignment="Left" Margin="116,160,0,0" VerticalAlignment="Top" Width="72" Click="Update"/>
+        <Button Content="Delete" HorizontalAlignment="Left" Margin="116,185,0,0" VerticalAlignment="Top" Width="72" Click="Delete"/>
 
     </Grid>
 </Window>
