--- a/Window1.xaml
+++ b/Window1.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Trivia_Master_Challenge_Test_Your_Knowledge_"
         mc:Ignorable="d"
-        Title="Manage Questions" Height="450" Width="800">
+        Title="Manage Questions" Height="500" Width="800">
     <Border BorderThickness="10" BorderBrush="MidnightBlue">
         <Border BorderThickness="7" BorderBrush="LightBlue">
             <Border BorderThickness="5" BorderBrush="SkyBlue">
@@ -29,12 +29,20 @@
 
                     <!-- CRUD Operations Section -->
                     <Border Grid.Row="0" Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="10">
-                        <StackPanel>
-                            <TextBlock Text="Operations" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" Margin="10"/>
-                            <Button Content="Get Questions" Margin="10" Click="Read"/>
-                            <Button Content="Update Question" Margin="10" Click="SelectToUpdate"/>
-                            <Button Content="Delete Question" Margin="10" Click="Delete"/>
-                        </StackPanel>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="2*"/>
+                                <RowDefinition Height="1.5*"/>
+                                <RowDefinition Height="1.5*"/>
+                                <RowDefinition Height="1.5*"/>
+                                <RowDefinition Height="2*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="Operations" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" Margin="10" Grid.Row="0"/>
+                            <Button Content="Get Questions" Margin="10" Click="Read" VerticalAlignment="Top" Grid.Row="1" FontWeight="Bold" Background="LightBlue"/>
+                            <Button Content="Update Question" Margin="10" Click="SelectToUpdate" VerticalAlignment="Top" Grid.Row="2" FontWeight="Bold" Background="LightBlue"/>
+                            <Button Content="Delete Question" Margin="10" Click="Delete" VerticalAlignment="Top" Grid.Row="3" FontWeight="Bold" Background="LightBlue"/>
+                            <Button Content="Return to Main Screen" Margin="10" Click="ReturnToMainScreen" Grid.Row="5" VerticalAlignment="Bottom" FontWeight="Bold" Background="LightBlue"/>
+                        </Grid>
                     </Border>
 
                     <!-- Middle Separator -->
@@ -43,10 +51,14 @@
 
                     <!-- Questions List Section -->
                     <Border Grid.Row="0" Grid.Column="2" BorderBrush="Black" BorderThickness="1" Margin="10">
-                        <StackPanel>
-                            <TextBlock Text="Existing Questions" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" Margin="10"/>
-                            <DataGrid x:Name="datagrid" Margin="10" Height="170" CanUserAddRows="False" />
-                        </StackPanel>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="2*"/>
+                                <RowDefinition Height="8*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="Existing Questions" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" Margin="10" Grid.Row="0"/>
+                            <DataGrid x:Name="datagrid" Margin="10" Height="170" CanUserAddRows="False" Grid.Row="1"/>
+                        </Grid>
                     </Border>
 
                     <!-- Content for the second row -->
@@ -63,53 +75,53 @@
                         <!-- Container for the "Create" button -->
                         <Border x:Name="createButtonContainer" Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="10" Panel.ZIndex="100">
                             <!-- Place the "Create" button in this container -->
-                            <Button x:Name="createButton" Content="Add New Question" Margin="10" Click="Create" Height="25" IsEnabled="True" Opacity="100"/>
+                            <Button x:Name="createButton" Content="Add New Question" Margin="10" Click="Create" Height="25" IsEnabled="True" Opacity="100" FontWeight="Bold" Background="LightBlue"/>
                         </Border>
                         <!-- Container for the "Create" button -->
                         <Border x:Name="updateButtonContainer" Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="10" Panel.ZIndex="0">
                             <!-- Place the "Update" button in this container -->
-                            <Button x:Name="updateButton" Content="Update" Margin="10" Click="Update" Height="25" IsEnabled="False" Opacity="0"/>
+                            <Button x:Name="updateButton" Content="Update" Margin="10" Click="Update" Height="25" IsEnabled="False" Opacity="0" FontWeight="Bold" Background="LightBlue"/>
                         </Border>
 
 
                         <!-- Container for the TextField (TextBox) -->
                         <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1" Margin="10">
-                        <ScrollViewer Grid.Column="1" BorderBrush="Black" BorderThickness="1" Margin="10" HorizontalScrollBarVisibility="Auto">
-                            <Grid>
-                                <!-- Define two rows for the Grid -->
-                                <Grid.RowDefinitions>
-                                    <!-- First row for headers -->
-                                    <RowDefinition Height="Auto" />
-                                    <!-- Second row for TextBoxes -->
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
+                            <ScrollViewer Grid.Column="1" BorderBrush="Black" BorderThickness="1" Margin="10" HorizontalScrollBarVisibility="Auto">
+                                <Grid>
+                                    <!-- Define two rows for the Grid -->
+                                    <Grid.RowDefinitions>
+                                        <!-- First row for headers -->
+                                        <RowDefinition Height="Auto" />
+                                        <!-- Second row for TextBoxes -->
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
 
-                                <!-- Headers for each field -->
-                                <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Text="QuestionID" Margin="5" Width="60"/>
-                                    <TextBlock Text="Question" Margin="5" Width="200"/>
-                                    <TextBlock Text="AnswerOne" Margin="5" Width="100"/>
-                                    <TextBlock Text="AnswerTwo" Margin="5" Width="100"/>
-                                    <TextBlock Text="AnswerThree" Margin="5" Width="100"/>
-                                    <TextBlock Text="AnswerFour" Margin="5" Width="100"/>
-                                    <TextBlock Text="Correct answer" Margin="5" Width="100"/>
+                                    <!-- Headers for each field -->
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock Text="Question ID" Margin="5" Width="65"/>
+                                        <TextBlock Text="Question" Margin="5" Width="200"/>
+                                        <TextBlock Text="Answer One" Margin="5" Width="100"/>
+                                        <TextBlock Text="Answer Two" Margin="5" Width="100"/>
+                                        <TextBlock Text="Answer Three" Margin="5" Width="100"/>
+                                        <TextBlock Text="Answer Four" Margin="5" Width="100"/>
+                                        <TextBlock Text="Correct Answer" Margin="5" Width="100"/>
 
-                                </StackPanel>
+                                    </StackPanel>
 
-                                <!-- TextBoxes for each field -->
-                                <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                    <!-- TextBoxes with corresponding bindings -->
-                                    <TextBox x:Name="newQuestionIDTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="60" IsEnabled="True"/>
-                                    <TextBox x:Name="newQuestionTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="200"/>
-                                    <TextBox x:Name="newAnswerOneTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
-                                    <TextBox x:Name="newAnswerTwoTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
-                                    <TextBox x:Name="newAnswerThreeTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
-                                    <TextBox x:Name="newAnswerFourTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
-                                    <TextBox x:Name="newCorrectAnswerTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
+                                    <!-- TextBoxes for each field -->
+                                    <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                        <!-- TextBoxes with corresponding bindings -->
+                                        <TextBox x:Name="newQuestionIDTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="65" IsEnabled="True"/>
+                                        <TextBox x:Name="newQuestionTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="200"/>
+                                        <TextBox x:Name="newAnswerOneTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
+                                        <TextBox x:Name="newAnswerTwoTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
+                                        <TextBox x:Name="newAnswerThreeTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
+                                        <TextBox x:Name="newAnswerFourTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
+                                        <TextBox x:Name="newCorrectAnswerTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
 
-                                </StackPanel>
-                            </Grid>
-                        </ScrollViewer>
+                                    </StackPanel>
+                                </Grid>
+                            </ScrollViewer>
                         </Border>
                     </Grid>
                 </Grid>
